# boilerplate

./: .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  mkdocs.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/linters/: .markdownlint.yml  ruff.toml
.github/workflows/: ci-cd.yaml  ci-cd.yml  ci.yaml  ci.yml  pypi-publish.yaml  python-tests.yaml
app/: main.py
app/data/: samples.json
app/sql/: create_table.sql
boilerplate/: __init__.py  _version.py  api.py  boilerplate.py
docs/: api.md  boilerplate.md
scripts/: boilerplate-example.sh
src/api/: api.py
src/api/sql/: query.sql
tests/: test_api.py  test_boilerplate.py  test_main.py
